Fix routing and homepage for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CineScope",
-  "homepage": "https://<SADHANA22365>.github.io/CineScope",
+  "homepage": "https://SADHANA22365.github.io/CineScope",
   "private": true,
   "version": "0.0.0",
   "type": "module",
